# home-manager-konsole

./: CMakeLists.txt  flake.nix  gen.cpp  home-manager-konsole.nix  update.cpp
.github/workflows/: build.yaml
